bundle/tests/scorecard/kuttl/route-certificate/02-delete-route.yaml
apiVersion: app.stacks/v1beta2
kind: RuntimeComponent
metadata:
  name: route-with-cert-rc
spec:
  # Add fields here
  applicationImage: 'k8s.gcr.io/pause:2.0'
  replicas: 1
  expose: true
  route:
