bundle/tests/scorecard/kuttl/route-certificate/03-delete-secret.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: app.stacks/v1beta2
  kind: RuntimeComponent
- apiVersion: v1
  kind: Secret
  name: route-tls-secret
