bundle/tests/scorecard/kuttl/route-certificate/01-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-with-cert-rc
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-with-cert-rc
spec:
  host: myapp.mycompany.com
  tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDPjCCAiagAwIBAgIQP2PJh7eh2XwB44qQWNrQQjANBgkqhkiG9w0BAQsFADA4
[...]
      hQRsBqxwjnK5AFLH7xQyhoWc
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIDYzCCAkugAwIBAgIQHUhe9rTL8xqZSBWoWMAKlzANBgkqhkiG9w0BAQsFADA4
[...]
      O3reDUrwAw==
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIDJDCCAgygAwIBAgIQYjfKtSv5Ky2e9eT6lJGmSDANBgkqhkiG9w0BAQsFADA8
[...]
      ytPQmBKGWBDeEph/kBi52auhlh1cpBguzXSufe0vB159nk6I+O43aQ==
      -----END CERTIFICATE-----
    destinationCACertificate: |
      destCAcrt
    key: |
      tlskey
    termination: reencrypt
