bundle/tests/scorecard/kuttl/route-certificate/02-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route-with-cert-rc
status:
  readyReplicas: 1
