bundle/tests/scorecard/kuttl/route-certificate/02-errors.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-with-cert-rc
spec:
  tls:
    caCertificate: |
      cacrt
    certificate: |
      tlscrt
    destinationCACertificate: |
      destCAcrt
    key: |
      tlskey
    termination: reencrypt
